storage/rook-ceph/cluster/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-internal-ingress
  namespace: rook-ceph
  labels:
    ingress: cilium
spec:
  ingressClassName: cilium
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rook-ceph-mgr-dashboard
              port:
                number: 8443
